@@ -244,6 +244,7 @@ cdef extern from "gdal.h" nogil:
     void GDALSetCacheMax64(GIntBig nBytes)
     CPLErr GDALDeleteDataset(GDALDriverH, const char *)
     char** GDALGetFileList(GDALDatasetH hDS)
+    CPLErr GDALCopyDatasetFiles (GDALDriverH hDriver, const char * pszNewName, const char * pszOldName)
 
 
 cdef extern from "ogr_api.h" nogil:
